--- a/issuerdemo/Base.lproj/Main.storyboard
+++ b/issuerdemo/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="declined:" destination="BYZ-38-t0r" eventType="touchDragOutside" id="AlL-Fb-eBK"/>
+                                    <action selector="declined:" destination="BYZ-38-t0r" eventType="touchUpInside" id="olT-Ti-V3O"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZRL-Tg-6eD">
